# Car-price-prediction

./: EDA.ipynb  ML_1.ipynb  ML_2.ipynb  ML_3.ipynb  README.md  app.py  pyproject.toml  requirements.txt
dataset/: car-name-mapping.json  cleaned.csv
models/: binary_encoder.pkl  preprocessor.pkl  regression_model.pkl
